overlays/prod-rollouts/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: booking-microservies
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    # This enables HTTP connections from Internet clients
    kubernetes.io/ingress.allow-http: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: rollouts.krystianlearns.cloud # rememeber to change it to yours
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
          - path: /(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: frontend
                port:
                  number: 80

          - path: /identity
            pathType: Prefix
            backend:
              service:
                name: identity
                port:
                  number: 80
          - path: /identity/(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: identity
                port:
                  number: 80

          - path: /flight
            pathType: Prefix
            backend:
              service:
                name: flight
                port:
                  number: 80
          - path: /flight/(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: flight
                port:
                  number: 80

          - path: /passenger
            pathType: Prefix
            backend:
              service:
                name: passenger
                port:
                  number: 80                  
          - path: /passenger/(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: passenger
                port:
                  number: 80

          - path: /booking
            pathType: Prefix
            backend:
              service:
                name: booking
                port:
                  number: 80                    
          - path: /booking/(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: booking
                port:
                  number: 80
